# its

./: .gitignore  .gitleaks-identity.toml  .gitleaks.toml  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.claude/: settings.json
box_migration/: parse_job.py  parse_job_v2.py  parse_job_v3.py  reconcile_box_listings.py
context-pack/: repo-overview.md
docs/: 2026-07-09_aug7_delivery_program.md  2026-07-19_dashboard_upgrade_slate.md  HOUSE_REFLEXES.md  README.md  ROADMAP.md  cc-brief_fieldops-next-session.md  cc-brief_form-request-month-filter.md  cc-brief_office-ops-nav-and-po-sc-config.md  cc-brief_p2.2-readviews.md  cc-brief_per-job-sheets-and-po-enhancements.md  cc-brief_progress-reporting-program_2026-06-28.md  doctrine_manifest.yaml  g23_crew_time_spec.md  phase2_form_editor_and_session_hardening_brief.md  picklist_sync.md  tech_debt.md  tech_debt_closed.md
docs_pdf/: __init__.py  brand.py  manifest.py  md_render.py
field_ops/: README.md  __init__.py  fieldops_sync.py
operator_dashboard/: README.md  __init__.py  __main__.py  app.py  auth.py  cache.py  config.py  config_defaults.json  node_briefs.py  sheet_briefs.py  system_map.py  system_view.py  tailscale_serve.sh  troubleshoot.py
po_materials/: __init__.py  config_actuator.py  config_apply.py  estimate_classify.py  estimate_extract.py  estimate_log.py  estimate_ocr.py  estimate_parse.py  estimate_poll.py  estimate_preview.py  estimate_sandbox.py  numbering.py  po_attach_screen.py  po_generate.py  po_log.py  po_naming.py  po_poll.py  po_review.py  po_send.py  po_send_poll.py  quote_form.py  rfq_generate.py  rfq_log.py  rfq_naming.py  rfq_poll.py  rfq_review.py  rfq_send.py  rfq_send_poll.py  terms.py  vendors.py
progress_reports/: __init__.py  equipment_status.py  hours_log.py  material_incidents.py  material_list.py  progress_send.py  progress_send_poll.py  progress_weekly_generate.py  wpr_review.py
prompts/: README.md  _example_prompt.md  safety_weekly_generate.md
safety_portal/: .dev.vars.example  .gitignore  README.md  catalog.json  catalog.schema.json  index.html  package-lock.json  package.json  required-content.json  tsconfig.json  tsconfig.test.json  tsconfig.worker.json  vite-plugin-eager-forms.ts  vite.config.ts  vitest.config.spa.ts  vitest.config.ts  workflows.json  workflows.schema.json  wrangler.jsonc
safety_reports/: README.md  __init__.py  compile_core.py  compile_now_poll.py  form_pdf.py  generate_core.py  intake.py  intake_poll.py  photo_screen.py  portal_admin.py  portal_poll.py  publish_daemon.py  publish_manifest.py  safety_naming.py  send_poll_core.py  week_folder.py  week_sheet.py  weekly_generate.py  weekly_send.py  weekly_send_poll.py  weekly_summary.py  wsr_review.py
schemas/: README.md  _example_schema.json  safety_weekly_generate.json  vendor_estimate_extraction.json
scripts/: README.md  audit_picklist_drift.py  build_docs_pdfs.py  build_runbook_xrefs.py  build_troubleshooting_guide.py  check_doctrine_drift.py  eval_estimate_ladder.py  generate_config_dictionary.py  generate_form_archive.py  install_safety_intake_daemon.sh  lint_doc_conventions.py  rasterize_logo.py  regen_doc_indexes.py  run_picklist_sync.py  seed_its_config.py  setup_box_oauth.py  smoke_test_alert_dedupe.py  smoke_test_box.py  smoke_test_error_log.py  smoke_test_graph.py  smoke_test_kill_switch.py  smoke_test_po_generate.py  smoke_test_po_send.py  smoke_test_progress_generate.py  smoke_test_progress_send.py  smoke_test_quarantine.py  smoke_test_resend.py  smoke_test_review_queue.py  smoke_test_scheduling.py  smoke_test_sentry.py  smoke_test_smartsheet.py  smoke_test_subcontract_send.py  smoke_test_watchdog.py  smoke_test_watchdog_catchup.py  smoke_test_watchdog_summary.py  smoke_test_weekly_generate.py  smoke_test_weekly_send.py  style_safety_portal_sheets.py  uninstall_safety_intake_daemon.sh  verify_cutover.py  (+2 more)
shared/: __init__.py  active_jobs.py  active_jobs_writer.py  alert_dedupe.py  anomaly_logger.py  anthropic_client.py  approval_verification.py  attachment_screening.py  box_client.py  circuit_breaker.py  compile_mutex.py  creds_resolution.py  defaults.py  error_log.py  errors_rotation.py  form_category.py  graph_client.py  header_forgery.py  heartbeat.py  heartbeat_client.py  job_sheet.py  keychain.py  kill_switch.py  log_rotation.py  ollama_client.py  picklist_sync.py  picklist_validation.py  portal_client.py  portal_hmac.py  project_routing.py  quarantine.py  recipient_health.py  redact.py  required_config.py  resend_client.py  review_queue.py  safety_week.py  scheduling.py  schema_loader.py  sentry_client.py  (+7 more)
smartsheet_migration/: .gitignore  ITS_Smartsheet_Handoff_v2_2026-05-17.docx  README.md  build_human_review.py  classify_closeout.py  inspect_closeout.py  inspect_source_schedule.py  migrate_closeout.py  migrate_fl.py  migrate_schedule.py  migrate_schedule_dryrun.py  seed_ops_dbs.py  ss_api.py
subcontracts/: __init__.py  exhibit.py  governing_law.py  money.py  numbering.py  subcontract_docx.py  subcontract_generate.py  subcontract_log.py  subcontract_naming.py  subcontract_poll.py  subcontract_review.py  subcontract_send.py  subcontract_send_poll.py  subcontractors.py  terms.py
tests/: conftest.py  test_active_jobs.py  test_active_jobs_writer.py  test_active_jobs_writer_integration.py  test_add_dormant_picklist_columns.py  test_add_wsr_workstream_column.py  test_alert_dedupe.py  test_anomaly_logger.py  test_approval_verification.py  test_approval_verification_integration.py  test_audit_picklist_drift.py  test_audit_picklist_drift_integration.py  test_box_build_1111b.py  test_box_build_1111b_integration.py  test_box_client.py  test_box_client_integration.py  test_box_clone_migration.py  test_builder_column_descriptions.py  test_capability_gating.py  test_check_doctrine_drift.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_compile_core.py  test_compile_mutex.py  test_compile_now_poll.py  test_config_actuator.py  test_config_apply.py  test_config_editor.py  test_config_editor_d1_3.py  test_conftest_guards.py  test_creds_resolution.py  test_daemon_ops.py  (+165 more)
(+785 files in other folders)
