[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "its"
version = "0.1.0"
description = "ITS — Integrated Technical System execution layer for Evergreen Renewables."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "smartsheet-python-sdk>=3.0.0",
    # Pinned to legacy 3.x because the OAuth client (shared/box_client.py)
    # uses the `boxsdk.OAuth2` + `boxsdk.Client` API. The PyPI `boxsdk`
    # package jumped to a renamed Gen API at 10.x (imports as
    # `box_sdk_gen`, different surface). Migration to the Gen API is a
    # separate decision; legacy 3.x is supported and stable.
    "boxsdk>=3.10.0,<4.0.0",
    "msal>=1.28.0",
    "requests>=2.32.0",
    "python-docx>=1.1.0",
    "python-dateutil>=2.9.0",
    "holidays>=0.50",
    "sentry-sdk>=2.0,<3.0",
    # Required by scripts/regen_doc_indexes.py + scripts/lint_doc_conventions.py
    # to parse YAML frontmatter in markdown docs. Transitively pulled in
    # locally by other deps but not guaranteed; pin explicitly for CI.
    "pyyaml>=6.0",
    # Validates safety_portal/forms/*.json against forms/meta-schema.json — the
    # single source of truth both renderers (TS display + Python PDF) consume.
    "jsonschema>=4.0",
    # Deterministic render-parity PDF renderer for Safety Portal submissions
    # (safety_reports/form_pdf.py, Option B — intake renders on arrival, Phase 5).
    # No AI; embeds SVG-path signatures + the definition's mandatory/legal text.
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "types-requests>=2.32",
    "types-jsonschema>=4.0",
    # Extracts text from the reportlab-rendered PDFs in tests/test_form_pdf.py to
    # assert render parity (labels / legal text / N/A present). Phase 5 promotes
    # this to a runtime dep for the Sat→Fri weekly-packet merge.
    "pypdf>=4.0",
]

[tool.setuptools]
# Python packages that ship with the project.
# Asset directories (schemas, prompts, scripts, logs) are NOT Python packages.
packages = ["shared", "safety_reports"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"smartsheet_migration/*" = ["E401", "I001", "F401", "B007", "UP035"]
"box_migration/*"        = ["I001", "F401", "UP042", "UP045"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default invocation skips integration tests — those hit live Smartsheet
# and require ITS_SMARTSHEET_TOKEN in Keychain. Operator runs them
# explicitly with `pytest -m integration` pre-deployment / after any
# smartsheet_client.py change. CI doesn't have live credentials, so
# default-skip keeps CI green.
addopts = "-q --strict-markers -m 'not integration'"
markers = [
    "integration: live-API tests against Smartsheet sandbox. Skipped by default; run with `pytest -m integration`. Requires ITS_SMARTSHEET_TOKEN in Keychain. NOT executed in CI.",
]

# ---- mypy ---------------------------------------------------------------
# Vendor SDKs without published type stubs or py.typed markers — silenced
# at the module boundary so mypy stays at zero baseline. types-requests
# (the proper fix for `requests`) is in dev deps above; the others have
# no maintained stubs upstream as of 2026-05.
[[tool.mypy.overrides]]
module = ["msal", "msal.*", "smartsheet", "smartsheet.*", "boxsdk", "boxsdk.*", "reportlab", "reportlab.*"]
ignore_missing_imports = true
